...
                            onPressed: () async {
                              final IconData? result = await showIconPicker(context: context, defalutIcon: selectedIcon);
                              setState(() {
                                selectedIcon = result;
                              });
                            },
                            child: const Text('Selecionar icone')
                        ),
                      ),
                    ]);
                  }),
                ],
              ),
            ),
          ),
          actions: [
            TextButton(
              child: const Text("Salvar"),
              onPressed: () {
                selectedIcon ??= Icons.credit_score;
                Provider.of<Types>(context, listen: false).add(ClientType(name: nomeInput.text, icon: selectedIcon));
                selectedIcon = null;
                Navigator.pop(context);
              }
...
